--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>百合超市官网</title>
     <meta name="description" content="百合超市官方网站，提供企业介绍、超市模式、商品信息、经营理念、门店地址及招商信息">
     <meta name="keywords" content="百合超市,超市招商,连锁超市,超市门店">
-    <link rel="icon" href="ico.png">
+    <link rel="icon" href="logo.png">
     <!-- 使用国内CDN加速 -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
