--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             theme: {
                 extend: {
                     colors: {
-                        navbar: '#C9DC6A',      // 黄绿色导航栏
-                        history: '#E3F2FD',     // 浅蓝色企业历史
-                        model: '#E8F5E9',       // 浅绿色超市模式
-                        products: '#FFF8E1',    // 浅黄色销售商品
-                        concept: '#F3E5F5',     // 淡紫色经营理念
-                        stores: '#E0F7FA',      // 淡青色旗下门店
-                        investment: '#FFEBEE',  // 淡红色招商广告
-                        contact: '#263238',     // 深色联系方式
+                        navbar: '#C9DC6A',
+                        history: '#E3F2FD',
+                        model: '#E8F5E9',
+                        products: '#FFF8E1',
+                        concept: '#F3E5F5',
+                        stores: '#E0F7FA',
+                        investment: '#FFEBEE',
+                        contact: '#263238',
                     },
                 }
             }
@@ -68,7 +68,7 @@
         <!-- 企业历史 -->
         <section class="section-container bg-history">
             <h2 class="section-title">
-                <i class="fa fa-history mr-2"></i>企业名称
+                <i class="fa fa-building mr-2"></i>企业名称
             </h2>
             <p class="mb-2">百合超市（威远赣诚百佳百货超市有限公司）</p>
         </section>
@@ -77,7 +77,7 @@
             <h2 class="section-title">
                 <i class="fa fa-history mr-2"></i>企业历史
             </h2>
-            <p class="mb-2">百合超市前身是广东粤客来超市，成立于2009年！2016年进军重庆市场，重庆旗下有好润佳、好又多，中尚购物，等商超门店，另有快捷酒店等公司其他业态，秉承着向行业领跑者胖东来、盒马鲜生，山姆会员店，河南鲜风，永辉调改门店等优秀企业学习，引入超前理念及优秀模式，不断发展壮大！</p>
+            <p class="mb-2">百合超市前身是广东粤客隆超市，成立于2009年！2016年进军重庆市场，重庆旗下经营有好润佳、好又多，中尚购物等商超品牌，另有快捷酒店等其他业态，秉承着向行业领跑者胖东来、盒马鲜生，山姆会员店，河南鲜风，永辉调改门店等优秀企业学习，引入超前理念及优秀模式，不断发展壮大！</p>
         </section>
 
         <!-- 超市模式 -->
@@ -95,27 +95,45 @@
             </h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                 <div>
-                    <h3 class="font-semibold mb-1">生鲜食品</h3>
+                    <h3 class="font-semibold mb-1">
+                        <i class="fa fa-envira" aria-hidden="true" /></i>
+                        生鲜食品
+                    </h3>
                     <p>包括新鲜蔬果、肉类、水产、禽蛋等，每日配送确保新鲜。</p>
                 </div>
                 <div>
-                    <h3 class="font-semibold mb-1">包装食品</h3>
+                    <h3 class="font-semibold mb-1">
+                        <i class="fa fa-cube" aria-hidden="true" /></i>
+                        包装食品
+                    </h3>
                     <p>各类零食、酒水奶饮、粮油米面、调味品、乳制品等日常生活必需品。</p>
                 </div>
                 <div>
-                    <h3 class="font-semibold mb-1">日用百货</h3>
+                    <h3 class="font-semibold mb-1">
+                        <i class="fa fa-shopping-bag" aria-hidden="true" /></i>
+                        日用百货
+                    </h3>
                     <p>洗漱用品、清洁用品、纸制品、服装鞋帽等家庭常用百货。</p>
                 </div>
                 <div>
-                    <h3 class="font-semibold mb-1">特色商品</h3>
+                    <h3 class="font-semibold mb-1">
+                        <i class="fa fa-cubes" aria-hidden="true" /></i>
+                        特色商品
+                    </h3>
                     <p>本地特产、季节性商品及自有品牌商品。</p>
                 </div>
                 <div>
-                    <h3 class="font-semibold mb-1">加工熟食</h3>
+                    <h3 class="font-semibold mb-1">
+                        <i class="fa fa-birthday-cake mr-2" /></i>
+                        加工熟食
+                    </h3>
                     <p>面包糕点、烤鸡烤鸭、凉菜及其他现做美食。</p>
                 </div>
                 <div>
-                    <h3 class="font-semibold mb-1">文体用品</h3>
+                    <h3 class="font-semibold mb-1">
+                        <i class="fa fa-television" aria-hidden="true" /></i>
+                        文体用品
+                    </h3>
                     <p>办公用品、学生文具、体育用品等</p>
                 </div>
             </div>
@@ -146,49 +164,28 @@
                         <tr>
                             <th>地区</th>
                             <th>名字</th>
-                            <th>面积</th>
-                            <th>经营年份</th>
-                            <th>地址</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>重庆</td>
+                            <td>重庆市璧山区</td>
                             <td>中尚量贩超市</td>
-                            <td>5000平</td>
-                            <td>8</td>
-                            <td>璧山区中大街278号</td>
                         </tr>
-                            <td>重庆</td>
+                            <td>重庆市璧山区</td>
                             <td>好润佳超市</td>
-                            <td>1500平</td>
-                            <td>5</td>
-                            <td>璧山区解放东路与金凤街交叉西120米</td>
                         </tr>
-                            <td>重庆</td>
+                            <td>重庆市九龙坡区</td>
                             <td>好又多超市</td>
-                            <td>3000平</td>
-                            <td>3</td>
-                            <td>九龙坡区华龙大道(轨道5号现中梁山站)</td>
                         </tr>
-                            <td>重庆</td>
+                            <td>重庆市璧山区</td>
                             <td>城市便捷酒店</td>
-                            <td>1000平/6层</td>
-                            <td>2</td>
-                            <td>重庆市璧山区青杠街道民安街116号</td>
                         </tr>
-                            <td>重庆</td>
+                            <td>重庆大足双桥经开区</td>
                             <td>百合超市</td>
-                            <td>7000平</td>
-                            <td>建设中</td>
-                            <td>大足双桥经开区渝西商业广场百合超市</td>
                         </tr>
                         </tr>
-                            <td>四川</td>
+                            <td>四川省内江市威远县</td>
                             <td>百合超市</td>
-                            <td>9900平</td>
-                            <td>建设中</td>
-                            <td>内江市威远万达百合超市</td>
                         </tr>
                     </tbody>
                 </table>
@@ -235,15 +232,15 @@
             </h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6 items-center">
                 <div>
-                    <p class="mb-2"><i class="fa fa-mobile text-2xl mr-2"></i>联系电话：400-888-9999</p>
-                    <p class="mb-2"><i class="fa fa-envelope mr-2"></i>电子邮箱：contact@baihe-supermarket.com</p>
-                    <p class="mb-2"><i class="fa fa-building mr-2"></i>总部地址：城市中心区商业大道158号</p>
-                    <p><i class="fa fa-clock-o mr-2"></i>招商热线工作时间：周一至周五 9:00-17:00</p>
+                    <p class="mb-2"><i class="fa fa-mobile text-2xl mr-2"></i>李总：18779993039</p>
+                    <p class="mb-2"><i class="fa fa-mobile text-2xl mr-2"></i>陈总：17383007372</p>
+                    <p class="mb-2"><i class="fa fa-mobile text-2xl mr-2"></i>经理：17775581823</p>
+                    <p class="mb-2"><i class="fa fa-envelope mr-2"></i>电子邮箱：17775580372@189.com</p>
+                    <p><i class="fa fa-clock-o mr-2"></i>热线工作时间：周一至周五 9:00-17:00</p>
                 </div>
                 <div class="flex justify-center">
                     <div class="bg-white p-3 rounded-lg">
                         <img src="dycode.png" alt="百合超市抖音二维码" class="w-40 h-40">
-                        <p class="text-center mt-2 text-sm">抖音扫码关注我们</p>
                     </div>
                 </div>
             </div>
