--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>百合超市官网</title>
     <meta name="description" content="百合超市官方网站，提供企业介绍、超市模式、商品信息、经营理念、门店地址及招商信息">
     <meta name="keywords" content="百合超市,超市招商,连锁超市,超市门店">
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="logo.webp">
     <!-- 使用国内CDN加速 -->
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -68,7 +68,7 @@
     <!-- 导航栏 -->
     <nav class="bg-navbar py-3 px-5 shadow-md sticky top-0 z-50">
         <div class="flex items-center">
-            <img src="logo.png" alt="百合超市logo" class="w-12 h-12 rounded-lg border-2 border-gray-300 mr-3">
+            <img src="logo.webp" alt="百合超市logo" class="w-12 h-12 rounded-lg border-2 border-gray-300 mr-3">
             <h1 class="text-xl md:text-2xl font-bold text-gray-800">百合超市</h1>
         </div>
     </nav>
@@ -219,37 +219,37 @@
                             <div class="carousel-placeholder absolute inset-0" id="placeholder-1">
                                 <i class="fa fa-image text-4xl text-gray-400"></i>
                             </div>
-                            <img src="1.jpg" alt="超市商品展示" class="w-full h-full object-contain carousel-image" onload="this.classList.add('loaded'); document.getElementById('placeholder-1').style.display='none'">
+                            <img src="1.webp" alt="超市商品展示" class="w-full h-full object-contain carousel-image" onload="this.classList.add('loaded'); document.getElementById('placeholder-1').style.display='none'">
                         </div>
                         <div class="min-w-full h-full relative">
                             <div class="carousel-placeholder absolute inset-0" id="placeholder-2">
                                 <i class="fa fa-image text-4xl text-gray-400"></i>
                             </div>
-                            <img src="2.jpg" alt="超市货架" class="w-full h-full object-contain carousel-image" onload="this.classList.add('loaded'); document.getElementById('placeholder-2').style.display='none'">
+                            <img src="2.webp" alt="超市货架" class="w-full h-full object-contain carousel-image" onload="this.classList.add('loaded'); document.getElementById('placeholder-2').style.display='none'">
                         </div>
                         <div class="min-w-full h-full relative">
                             <div class="carousel-placeholder absolute inset-0" id="placeholder-3">
                                 <i class="fa fa-image text-4xl text-gray-400"></i>
                             </div>
-                            <img src="3.jpg" alt="生鲜区" class="w-full h-full object-contain carousel-image" onload="this.classList.add('loaded'); document.getElementById('placeholder-3').style.display='none'">
+                            <img src="3.webp" alt="生鲜区" class="w-full h-full object-contain carousel-image" onload="this.classList.add('loaded'); document.getElementById('placeholder-3').style.display='none'">
                         </div>
                         <div class="min-w-full h-full relative">
                             <div class="carousel-placeholder absolute inset-0" id="placeholder-4">
                                 <i class="fa fa-image text-4xl text-gray-400"></i>
                             </div>
-                            <img src="4.jpg" alt="促销活动" class="w-full h-full object-contain carousel-image" onload="this.classList.add('loaded'); document.getElementById('placeholder-4').style.display='none'">
+                            <img src="4.webp" alt="促销活动" class="w-full h-full object-contain carousel-image" onload="this.classList.add('loaded'); document.getElementById('placeholder-4').style.display='none'">
                         </div>
                         <div class="min-w-full h-full relative">
                             <div class="carousel-placeholder absolute inset-0" id="placeholder-5">
                                 <i class="fa fa-image text-4xl text-gray-400"></i>
                             </div>
-                            <img src="5.jpg" alt="顾客购物" class="w-full h-full object-contain carousel-image" onload="this.classList.add('loaded'); document.getElementById('placeholder-5').style.display='none'">
+                            <img src="5.webp" alt="顾客购物" class="w-full h-full object-contain carousel-image" onload="this.classList.add('loaded'); document.getElementById('placeholder-5').style.display='none'">
                         </div>
                         <div class="min-w-full h-full relative">
                             <div class="carousel-placeholder absolute inset-0" id="placeholder-6">
                                 <i class="fa fa-image text-4xl text-gray-400"></i>
                             </div>
-                            <img src="6.jpg" alt="门店外观" class="w-full h-full object-contain carousel-image" onload="this.classList.add('loaded'); document.getElementById('placeholder-6').style.display='none'">
+                            <img src="6.webp" alt="门店外观" class="w-full h-full object-contain carousel-image" onload="this.classList.add('loaded'); document.getElementById('placeholder-6').style.display='none'">
                         </div>
                     </div>
                     
